--- a/Portfolio_AE/index.html
+++ b/Portfolio_AE/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
-        <title>Your Name Here</title>
+        <title>Arie's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
     </head>
 
@@ -15,7 +15,7 @@
         <div class="Navbar">
             <a class="active" href="#Home">Home</a>
             <a href="#coding">Software Development</a>
-            <a href="videoproduction">Video Production</a>
+            <a href="Video_Production.html">Video Production</a>
             <a href="#Contact">Contact</a>
         </div>
 
@@ -66,13 +66,13 @@
                     Atlantic University). Experienced, versatile, and hard-working, video editor and creative producer with several years of experience working on local and online
                     advertisements for high-profile brands on a global scale.
                     
-                    <br>I am a Game Developer and video producer that would love to work with you on your project. <a href="#Contact">Contact</a> me below!
+                    <br id="coding">I am a Game Developer and video producer that would love to work with you on your project. <a href="#Contact">Contact</a> me below!
                 </p>
             </div>
         </div>
 
         <!--GitHub section-->
-        <div class="Row" id="GitHub">
+        <div class="Row">
             <!--Left column-->
             <div class="Column_3">
                 <h1>GitHub</h1>
