--- a/Portfolio_AE/index.html
+++ b/Portfolio_AE/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>Arie's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
+        <script src="JS/portfolioJS.js"></script>
     </head>
 
     <!--Body-->
@@ -14,9 +15,10 @@
         <!--Navbar-->
         <div class="Navbar">
             <a class="active" href="#Home">Home</a>
+            <a href="#Slideshow">Slideshow</a>
             <a href="#coding">Software Development</a>
             <a href="Video_Production.html">Video Production</a>
-            <a href="#Contact">Contact</a>
+            <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
         </div>
 
         <!--Breaks inserted to add space between navbar and the first heading-->
@@ -48,6 +50,57 @@
                     <br> Thank you for stopping by and enjoy! 
                 </p>
             </strong>
+        </div>
+        <!-- SLIDE SHOW-->
+        <div id="Slideshow">
+            <div id="Slideshow_Background"> 
+                <div id="Slideshow_Container">
+                    <!-- Slide 1 of 6 -->
+                    <div class="mySlides fade" style="display: block;">
+                        <img class="Slideshow_Images" src="images/SlideShow/Professional_ImageAE.png">
+                        <div class="text">I'm available to assist you on your project!</div>
+                    </div>
+                    <!-- Slide 2 of 6 -->
+                    <div class="mySlides fade" style="display: none;">
+                        <img class="Slideshow_Images" src="images/SlideShow/htmlcssjs-overview.png"> 
+                        <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
+                    </div>
+                    <!-- Slide 3 of 6 -->
+                    <div class="mySlides fade" style="display: none;">
+                        <img class="Slideshow_Images" src="images/SlideShow/python-programming-language.png">
+                        <div class="text">the popular programming language Python,</div>
+                    </div>
+                    <!-- Slide 4 of 6 -->
+                    <div class="mySlides fade" style="display: none;">
+                        <img class="Slideshow_Images" src="images/SlideShow/Csharp - C++.png">
+                        <div class="text">C#, C++, </div>
+                    </div>
+                    <!-- Slide 5 of 6 -->
+                    <div class="mySlides fade" style="display: none;">
+                        <img class="Slideshow_Images" src="images/SlideShow/SQL-logo.png"> 
+                        <div class="text">back end development, databases and SQL.</div>
+                    </div>
+                    <!-- Slide 6 of 6 -->
+                    <div class="mySlides fade" style="display: none;">
+                        <img class="Slideshow_Images" src="images/SlideShow/contactme.png"> 
+                        <div class="text"><a class="white-text contact" onclick="openForm()">Contact me now!</a></div> 
+                    </div>
+                    <!-- Previous and next buttons -->
+                    <a class="Previous" onclick="plusSlides(-1)">❮</a>
+                    <a class="Next" onclick="plusSlides(1)">❯</a>
+                </div>
+                <br> <!-- Adds a space between the slideshow images and the dots -->
+        
+                <!-- Slideshow dots (these are another way for users to navigate through the slideshow) -->
+                <div style="text-align: center">
+                    <span class="dot active" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span> 
+                    <span class="dot" onclick="currentSlide(4)"></span> 
+                    <span class="dot" onclick="currentSlide(5)"></span> 
+                    <span class="dot" onclick="currentSlide(6)"></span> 
+                </div>
+            </div>
         </div>
 
         <!--About section-->
@@ -89,29 +142,31 @@
         </div>
 
         <!--Contact section-->
-        <div class="Row" id="Contact">
-            <!--Contact image, left column-->
-            <div class="Column_2 Column_tall">
-                <img src="images/img2.jpg" alt="Contact_Image" class="img_margin">
-            </div>
-            <!--Contact form, right column-->
-            <div class="Column_1 Column_tall">
-                <h1>Contact</h1>
-                <!--This specifies where and how to send the form data; we are leaving it blank-->
-                <form action="" method="POST"> <!-- Here we are utilizing a 3rd party service to submit the contact form data, insert your formspree endpoint in the action attribute -->
-                    <label>Name:</label>
-                        <input type="text" placeholder="Please enter your name here">
-                    <label>Email:</label>
-                        <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
-                    <label>Message:</label>
-                        <input type="text" id="Message" name="Message" placeholder="Please write your message here">
-                        <input type="submit" value="SUBMIT">
-                </form>
-            </div>
-        </div>
+                  
+        <button onclick="openForm()" class="open-button" >CONTACT</button>
 
+        <div class="form-popup" id="myForm">
+        <form action="https://formspree.io/info@learncodinganywhere.com" method="POST" class="form-container">
+            <h1 id="contColor">CONTACT</h1>
+
+            <label for="fName"><b>Name</b></label>
+            <input type="text" placeholder="Type your name here..." name="fName" required>
+
+            <label for="phoneN"><b>Phone</b></label>
+            <input type="text" placeholder="Type your phone number here..." name="phoneN" required>
+
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="Msg"><b>Message</b></label>
+            <input type="text" placeholder="Type your message here..." name="Msg" required>
+
+            <button type="submit" class="btn">Submit</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+        </form>
+        </div>
         <!--Footer section-->
-        <footer>
+        <footer class="footBG">
             <p>
                 <p class="foot"> Email: Arieleon25@yahoo.com
                     <br> Phone Number: 305 206 2596</p>
